[package]
name = "cargo-qp"
version = "0.2.0"
edition = "2021"
description = "Copy Rust sources & Cargo.toml files to the clipboard (workspace-aware)"
license = "MIT OR Apache-2.0"
keywords = ["clipboard", "cargo-subcommand", "workspace"]
categories = ["development-tools", "command-line-utilities"]
authors = ["AJ <aj@synarktech.com"]
repository = "https://github.com/jurshsmith/cargo-qp"
readme = "README.md"

[[bin]]
name = "cargo-qp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.18"
cargo_toml = "0.15"
git2 = "0.18"
arboard = "3"
